--- a/index.html
+++ b/index.html
@@ -4,23 +4,163 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/estilos.css">
+	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="header">
-		
+	<header class="header relative border-bottom">
+		<a href="#" class="button-menu icon-menu2">
+		</a>
+		<nav class="menu">
+			<ul class="list">
+				<li class="item">
+					<a href="#">Top Hits</a>
+				</li>
+				<li class="item">
+					<a href="#">Play List</a>
+				</li>
+				<li class="item">
+					<a href="#">Top Hits</a>
+				</li>
+				<li class="item">
+					<a href="#">Top Hits</a>
+				</li>
+				<li class="item">
+					<a href="#">Top Hits</a>
+				</li>
+				<li class="item">
+					<a href="#">Top Hits</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="title">
+			<span>
+				Top Hits
+			</span>
+		</div>
 	</header>
+	<section class="playing small center-block">
+		<figure class="image relative">
+			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae Pharrell Williams">
+			<div class="actions padding rigth-text">
+				<a href="" class="action icon-cart2"></a>
+				<a href="" class="action icon-share"></a>
+				<a href="" class="action icon-heart"></a>
+			</div>
+		</figure>
+		<div class="progress">
+			<div class="total">
+				<div class="state">
+					<div class="circle">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="description center-text">
+			<p class="name">
+				Come Get It Bae
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</div>
+		<div class="play center-text">
+			<a href="" class="action icon-backward2"></a>
+			<a href="" class="action icon-play3"></a>
+			<a href="" class="action icon-forward3"></a>
+			<a href="" class="action icon-shuffle"></a>
+			<a href="" class="action icon-volume-medium"></a>
+		</div>
+	</section>
 	<section class="container">
 		<article class="song">
 			<figure class="image">
-				<img src="" alt="">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
 			</figure>
 			<p class="name">
 				Girl
 			</p>
 			<p class="author">
-				Parrel Williams
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</article>
+		<article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" width="128px" heihgt="128px" alt="Girl Pharrell Williams">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
 			</p>
 		</article>
 	</section>
 </body>
-</html>`
+</html>
